Fix overflow issue

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,7 +5,6 @@ $accentDark: #0C0032;
     margin: 0;
     padding: 0;
     transition-timing-function: cubic-bezier(0,0,.4,1);
-    overflow-x: hidden;
     &:hover {
         cursor: none !important;
     }
